--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
 		"@nextui-org/theme": "2.2.11",
 		"@react-aria/ssr": "3.9.4",
 		"@react-aria/visually-hidden": "3.8.12",
+		"axios": "^1.7.7",
 		"clsx": "2.1.1",
 		"framer-motion": "~11.1.1",
 		"intl-messageformat": "^10.5.0",
+		"jwt-decode": "^4.0.0",
 		"nexios-http": "^1.1.21",
 		"next": "^14.2.4",
 		"next-themes": "^0.2.1",
