--- a/package.json
+++ b/package.json
@@ -3,18 +3,22 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "eslint . --ext .ts,.tsx -c .eslintrc.json --fix"
   },
   "dependencies": {
-    "@nextui-org/button": "2.0.38",
+    "@nextui-org/avatar": "^2.0.33",
+    "@nextui-org/button": "^2.0.38",
+    "@nextui-org/card": "^2.0.34",
     "@nextui-org/code": "2.0.33",
-    "@nextui-org/input": "2.2.5",
+    "@nextui-org/divider": "^2.0.32",
+    "@nextui-org/input": "^2.2.5",
     "@nextui-org/kbd": "2.0.34",
     "@nextui-org/link": "2.0.35",
     "@nextui-org/listbox": "2.1.27",
+    "@nextui-org/modal": "^2.0.41",
     "@nextui-org/navbar": "^2.0.37",
     "@nextui-org/react": "^2.4.8",
     "@nextui-org/snippet": "2.0.43",
