--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "clsx": "2.1.1",
     "framer-motion": "~11.1.1",
     "intl-messageformat": "^10.5.0",
+    "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "nexios-http": "^1.1.21",
     "next": "^14.2.4",
@@ -43,6 +44,7 @@
     "sonner": "^1.5.0"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "20.5.7",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
