--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nextui-org/theme": "2.2.11",
     "@react-aria/ssr": "3.9.4",
     "@react-aria/visually-hidden": "3.8.12",
+    "@reduxjs/toolkit": "^2.2.8",
     "@tanstack/react-query": "^4.36.1",
     "axios": "^1.7.7",
     "clsx": "2.1.1",
